--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
     <p>
         I am also a teacher and teaching <b>ICDL</b> program to students.
     </p>
-    <img src="images/Profile.HEIC" height="200px" width="200px"/>
+    <img src="Profile.HEIC" height="200px" width="200px"/>
     <p>
         This webpage is created with pure <b>HTML</b> and <b>CSS</b>.
     </p>
